--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,25 @@
 body,html {
     margin: 0;
     padding: 0;
+    color: #222222;
 }
 * {
     box-sizing: border-box;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  a:link, a:visited {
+    text-decoration: none;
+    color: #222222;
+  }
+  a:hover {
+    font-weight: 900;
+  }
+
 .split {
     height: 100%;
     position: fixed;
@@ -43,4 +58,10 @@ body,html {
     background-color: rgba(252, 252, 252, 0.3);;
     z-index: 1;
     padding: 50px;
+  }
+
+  .list-item {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 20px;
   }
