add changec to recepie page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,7 +53,7 @@ ul {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 60%;
-    height: 60%;
+    min-height: 60%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: rgba(252, 252, 252, 0.7);;
     z-index: 1;
@@ -63,7 +63,6 @@ ul {
 
   .container-img {
     width: 750px;
-    height: 100%;
     position: relative;
 }
 
@@ -89,4 +88,8 @@ ul {
     flex-direction: column;
     justify-content: space-between;
     margin-left: 50px;
+  }
+
+  .homepage-link {
+    opacity: 0.7;
   }
